--- a/book.toml
+++ b/book.toml
@@ -5,4 +5,4 @@ src = "mdbook"
 title = "NePP CTF"
 
 [output.html]
-additional-css = ["mdbook/css/custom.css"]
+additional-css = ["mdbook/css/level_1_web_static_site_source.css"]
