--- a/.github/workflows/docker-publish-level1-linux-1.yml
+++ b/.github/workflows/docker-publish-level1-linux-1.yml
@@ -1,4 +1,4 @@
-name: Docker
+name: Docker publish level1 linux 1
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
@@ -71,7 +71,7 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
-          context: .
+          context: ./questions/level1/linux/1/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
