--- a/.github/workflows/docker-publish-level1-linux-1.yml
+++ b/.github/workflows/docker-publish-level1-linux-1.yml
@@ -7,7 +7,6 @@ name: Docker publish level1 linux 1
 
 on:
   push:
-    branches: [ "main" ]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*-level1-linux-1' ]
 
@@ -63,7 +62,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-level1-lunux-1
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-level1-linux-1
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
