--- a/.github/workflows/docker-publish-level1-linux-1.yml
+++ b/.github/workflows/docker-publish-level1-linux-1.yml
@@ -1,4 +1,4 @@
-name: Docker publish level1 linux 1
+name: Docker publish linux docker q1
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
@@ -8,7 +8,7 @@ name: Docker publish level1 linux 1
 on:
   push:
     # Publish semver tags as releases.
-    tags: [ 'v*.*.*-level1-linux-1' ]
+    tags: [ 'v*.*.*-linux-docker-q1' ]
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -62,7 +62,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-level1-linux-1
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-linux-docker-q1
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
@@ -70,7 +70,7 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
-          context: ./questions/level1/linux/1/
+          context: ./questions/linux_docker/q1/
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
