--- a/server/k8s/bases/deployment.yaml
+++ b/server/k8s/bases/deployment.yaml
@@ -13,11 +13,7 @@ spec:
         app: nepp-ctf-server
     spec:
       containers:
-      - name: hello
-        image: "us-docker.pkg.dev/google-samples/containers/gke/hello-app:2.0"
-        env:
-        - name: "PORT"
-          value: "50001"
+      - name: server
         # Predictable Demand pattern
         resources:
           requests:
