--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -101,7 +101,7 @@ jobs:
             --tag "${DOCKER_TAG}" \
             --build-arg GITHUB_SHA="${GITHUB_SHA}" \
             --build-arg GITHUB_REF="${GITHUB_REF}" \
-            .
+            ./server/
 
           docker push "${DOCKER_TAG}"
 
