--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -53,7 +53,7 @@ env:
 jobs:
   setup-build-publish-deploy:
     name: 'Setup, Build, Publish, and Deploy'
-    runs-on: 'ubuntu-latest'
+    runs-on: 'ubuntu-22.04'
     environment: 'production'
 
     permissions:
