--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -53,7 +53,7 @@ env:
 jobs:
   setup-build-publish-deploy:
     name: 'Setup, Build, Publish, and Deploy'
-    runs-on: 'ubuntu-22.04'
+    runs-on: 'ubuntu-latest'
     environment: 'production'
 
     permissions:
@@ -109,7 +109,7 @@ jobs:
       # Set up kustomize
       - name: 'Set up Kustomize'
         run: |-
-          curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize%2Fv5.4.3/kustomize_v5.4.3_linux_amd64.tar.gz
+          curl -s "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh"  | bash
           chmod u+x ./kustomize
 
       # Deploy the Docker image to the GKE cluster
