--- a/server/k8s/bases/deployment.yaml
+++ b/server/k8s/bases/deployment.yaml
@@ -14,6 +14,7 @@ spec:
     spec:
       containers:
       - name: server
+        image: asia-northeast1-docker.pkg.dev/nepp-cloud/nepp-ctf-server-repository/nepp-ctf-server:TAG
         # Predictable Demand pattern
         resources:
           requests:
