--- a/server/k8s/bases/gateway.yaml
+++ b/server/k8s/bases/gateway.yaml
@@ -4,12 +4,12 @@ metadata:
   name: nepp-ctf-server-gateway
   annotations:
     networking.gke.io/certmap: ctf-nepp-tumsat-dev-map
-status:
-  addresses:
-    - value: 34.13.78.78
 spec:
   gatewayClassName: gke-l7-global-external-managed
   listeners:
   - name: https
     protocol: HTTPS
     port: 443
+  addresses:
+  - type: NamedAddress
+    value: 34.13.78.78 
