--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -12,7 +12,7 @@ RUN go mod download
 
 COPY *.go ./
 
-RUN CGO_ENABLED=0 GOOS=linux go build -o /server
+RUN CGO_ENABLED=0 GOOS=linux go build -mod=mod -o /server main.go
 
 # Run the tests in the container
 FROM build-stage AS run-test-stage
